2007-08-30  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl: Ignore XB- fields instead of XC- fields
	from control file binary package stanzas.

2007-08-28  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Fix regression introduced on commit
	from 2007-08-08, which was producing a warning due to usage of
	uninitialized variables.

2007-08-28  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl: Add comments about the second pass
	parsing for dependency fields. Remove handling of uninteresting fields
	in the second pass parsing.

2007-08-24  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl: Allow a package stanza to override the
	Homepage field from the source stanza.

2007-08-20  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (arbitrary_fields): New variable.
	(known_arbitrary_field): New function.
	(do_build): Call known_arbitrary_field to not warn on known arbitrary
	fields.
	* scripts/dpkg-genchanges.pl: Ignore Homepage field.
	* scripts/dpkg-gencontrol.pl: Parse Homepage from source package
	stanza.
	(@control_fields): Add Homepage.
	* scripts/dpkg-scanpackages.pl (@fieldpri): Add Homepage.
	* scripts/dpkg-source.pl: Parse Homepage from source package stanza.
	(@dsc_fields): Add Homepage.

2007-08-18  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-divert.pl (infol): Check if parameters are defined
	before using them. Use defined instead of length to check for undef
	variables.

2007-08-14  Guillem Jover  <guillem@debian.org>

	* lib/parsehelp.c (parseerr): Switch from ternary operator to compose
	a string to a conditional call to the function with two different
	strings, making life easier for translators.
	* src/archives.c (tarobject): Likewise.
	* src/query.c (searchoutput): Switch from a loop with two iterations
	and ternary operators to compose strings to a conditional with two
	sequential calls with different strings, making life easier for
	translators.
