@@ -40,6 +40,8 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Implement support for Homepage field. Closes: #142324
   * Ignore XB- fields instead of XC- fields from control file binary package
     stanzas in dpkg-genchanges.
+  * Explicitely ignore all known fields from the control file source package
+    stanza in dpkg-genchanges, instead of leaving unknown fields unwarned.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
